<resources>
    <string name="app_name">SWUni-Up</string>

    <string name="Kakao_button_text">KakaoLogin</string>
    <string name="home_box_logo">슈니의\n다양한\n도전을\n응원해</string>
    <string name="home_bottom_button">챌린지 둘러보기  ➤</string>

    <string name="image_view">Select Image</string>
    <string name="create_title">제목</string>
    <string name="create_description">설명</string>
    <string name="create_max">최대 인원수</string>
    <string name="create_category">카테고리</string>
    <string name="recruitment">모집 시작일</string>
    <string name="challenge_start">시작일</string>
    <string name="challenge_end">종료일</string>
    <string name="challenge_day">______일 챌린지</string>
    <string name="kakao_key">kakao085bb0c535d430a74371a1010be54ac7</string>
    <string name="kakao_native_key">085bb0c535d430a74371a1010be54ac7</string>

    <string-array name="custom_weekdays">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>


    <string-array name="departments">
        <item>국어국문학과</item>
        <item>영어영문학과</item>
        <item>중어중문학과</item>
        <item>일어일문학과</item>
        <item>사학과</item>
        <item>기독교학과</item>
        <item>불어불문학과</item>
        <item>독어독문학과</item>
        <item>경제학과</item>
        <item>문헌정보학과</item>
        <item>사회복지학과</item>
        <item>아동학과</item>
        <item>행정학과</item>
        <item>언론영상학부</item>
        <item>교육심리학과</item>
        <item>스포츠운동과학과</item>
        <item>수학과</item>
        <item>화학과</item>
        <item>생명환경공학과</item>
        <item>바이오헬스융합학과</item>
        <item>원예생명조경학과</item>
        <item>식품공학과</item>
        <item>식품영양학과</item>
        <item>화학ㆍ생명환경과학부</item>
        <item>식품응용시스템학부</item>
        <item>경영학과</item>
        <item>패션산업학과</item>
        <item>디지털미디어학과</item>
        <item>정보보호학부</item>
        <item>소프트웨어융합학과</item>
        <item>데이터사이언스학과</item>
        <item>산업디자인학과</item>
        <item>현대미술전공</item>
        <item>공예전공</item>
        <item>시각디자인전공</item>
        <item>첨단미디어디자인전공</item>
    </string-array>

    <string name="signin_button">회원가입</string>
    <string name="signin_email">이메일</string>
    <string name="signin_password">비밀번호</string>
    <string name="signin_nickname">닉네임</string>
    <string name="signin_do_signup">가입하기</string>
    <string name="signin_trytext">아직 계정이 없나요?</string>
    <string name="signin_kakao">카카오로 시작하기</string>
    <string name="signin_simple">로그인</string>
    <string name="signin_lost_password">비밀번호를 잊어버렸어요</string>


</resources>