<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChallengeCreate"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@drawable/ic_back_arrow"
        android:contentInsetStart="0dp"
        android:contentInsetEnd="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 제목을 위한 TextView 추가 -->
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="생성하기"
            android:textColor="@color/white"
            android:fontFamily="@font/wavve_pado"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_gravity="center_vertical|center_horizontal"/>
    </androidx.appcompat.widget.Toolbar>

    <android.widget.ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                android:id="@+id/calendar_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:theme="@style/CalenderViewCustom"
                app:mcv_selectionMode="range"
                app:mcv_showOtherDates="all"
                app:mcv_firstDayOfWeek="sunday"
                app:mcv_rightArrow="@drawable/ic_arrow_right"
                app:mcv_leftArrow="@drawable/ic_arrow_left"
                app:mcv_dateTextAppearance="@style/CalenderViewDateCustomText"
                app:mcv_weekDayTextAppearance="@style/CalenderViewWeekCustomText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <!-- 왼쪽 정렬 텍스트뷰 -->
                <TextView
                    android:id="@+id/recruitmentTextViewLeft"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="30dp"
                    android:fontFamily="@font/wavve_pado"
                    android:text="@string/recruitment"
                    android:textSize="20sp"
                    android:gravity="start"/>

                <!-- 오른쪽 정렬 텍스트뷰 -->
                <TextView
                    android:id="@+id/recruitmentTextViewRight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="30dp"
                    android:fontFamily="@font/wavve_pado"
                    android:text="0월 00일"
                    android:textColor="@color/navy"
                    android:textSize="20sp"
                    android:gravity="end"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <!-- 왼쪽 정렬 텍스트뷰 -->
                <TextView
                    android:id="@+id/startTextViewLeft"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="30dp"
                    android:fontFamily="@font/wavve_pado"
                    android:text="@string/challenge_start"
                    android:textSize="20sp"
                    android:gravity="start"/>

                <!-- 오른쪽 정렬 텍스트뷰 -->
                <TextView
                    android:id="@+id/startTextViewRight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="30dp"
                    android:fontFamily="@font/wavve_pado"
                    android:text="0월 00일"
                    android:textColor="@color/navy"
                    android:textSize="20sp"
                    android:gravity="end"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <!-- 왼쪽 정렬 텍스트뷰 -->
                <TextView
                    android:id="@+id/endTextViewLeft"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="30dp"
                    android:fontFamily="@font/wavve_pado"
                    android:text="@string/challenge_end"
                    android:textSize="20sp"
                    android:gravity="start"/>

                <!-- 오른쪽 정렬 텍스트뷰 -->
                <TextView
                    android:id="@+id/endTextViewRight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="30dp"
                    android:fontFamily="@font/wavve_pado"
                    android:text="0월 00일"
                    android:textColor="@color/navy"
                    android:textSize="20sp"
                    android:gravity="end"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <TextView
                    android:id="@+id/dayTextRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/wavve_pado"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="35dp"
                    android:text="@string/challenge_day"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:gravity="end"/>

                <TextView
                    android:id="@+id/dayTextViewLeft"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:fontFamily="@font/wavve_pado"
                    android:textSize="30sp"
                    android:text="" />

            </FrameLayout>


            <Button
                android:id="@+id/makeButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:layout_gravity="center"
                android:fontFamily="@font/wavve_pado"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="생성하기" />

        </LinearLayout>

    </android.widget.ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
